# MLECH.Backend

./: .gitignore  Dockerfile  README.md  alembic.ini  base_commands  docker-compose.yml  pyproject.toml  pyprojectDocker.toml
app/: config.py  main.py
app/authentication/: authenticate_user.py  get_current_user.py  tokens.py
app/domain/models/: user.py
app/infrastructure/db/: alembic.ini  database.py  db_settings.py
app/infrastructure/repositories/: abstract_repository.py  user_repository.py
app/infrastructure/schemas/: car_schemas.py  cars_predicted_data_schemas.py  driver_schemas.py  fix_info_schemas.py  mechanic_schemas.py  ride_info_schemas.py  rides_schemas.py  user_schemas.py
app/repositories/: car_predicted_data_repository.py  car_repository.py  driver_repository.py  fix_info_repository.py  mechanic_repository.py  repository.py  ride_info_repository.py  ride_repository.py  user_repository.py
app/routers/access/: access.py  login.py  logout.py  profile.py  registration.py
app/routers/cars/: cars.py  create.py  delete.py  read.py  update.py
app/routers/drivers/: delete.py  drivers.py  read.py  update.py
app/routers/fixes/: create.py  delete.py  fixes.py  read.py  update.py
app/routers/mechanics/: delete.py  mechanics.py  read.py  update.py
app/routers/rides/: create.py  delete.py  read.py  rides.py  update.py
app/routers/users/: delete.py  update.py  users.py
app/routes/users/: create.py  user_routers.py
app/scripts/: fill_database.py
app/tests/: conftest.py  test_root.py
app/users_jwt_access/: authenticate.py  jwt.py  pass_hashing.py
(+17 files in other folders)
