[tool.poetry]
name = "auto_park"
version = "0.1.0"
description = "Сервис автопарк"
authors = ["bibaIboba <bibaIboba@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.100.0"
uvicorn = "0.22.0"
alembic = ">=1.13.3"
asyncpg = ">=0.30.0"
passlib = "^1.7.4"  # Updated passlib without bcrypt extra
bcrypt = "^4.0.1"   # Explicitly add bcrypt package
faker = ">=33.1.0"
numpy = ">=2.2.0"
pydantic = ">=2.9.2"
"pydantic-settings" = ">=2.6.0"
pytest = ">=8.3.3"
"python-jose" = ">=3.3.0"
sqlalchemy = ">=2.0.36"
typer = ">=0.12.5"
email-validator = ">=1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
